--- a/index.html
+++ b/index.html
@@ -4,55 +4,71 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet">
 </head>
 <body>
   <header>
-    <section class="logo">
-      <img src="img/logo_chip.svg" alt="Logo Chip">
+    <div class="logo">
+      <img class="icon_chip" src="img/icon_chip.svg" alt="Icon Chip">
       <h3>Чіп Чендж</h3>
-    </section>
+    </div>
     <nav>
-      <ul>
-        <li><a href="#">Контакти</a></li>
-        <li><a href="#">Конвертер валют</a></li>
+      <ul class="nav">
+        <li><a href="#">Послуги</a></li>
+        <li><a class="converter" href="#">Конвертер валют</a></li>
         <li><a href="#">Контакти</a></li>
         <li><a href="#">Задати питання</a></li>
       </ul>
     </nav>
-    <img src="img/vector.svg" alt="Vector">
+    <div class="account">
+    <img class="icon_vector" src="img/vector.svg" alt="Icon vector">
     <a href="#">Особистий кабінет</a>
+    </div>
   </header>
   <main>
     <section class="chip_change">
       <div class="chip_change_description">
         <h1>Чіп Чендж</h1>
-        <p class="chip_change_subtitle">Обмінник валют - навчальний</p>
-        <a class="currency_converter_button" href="#">Конвертер валют</a>
+        <p>Обмінник валют - навчальний</p>
+        <a href="#">Конвертер валют</a>
       </div>
-      <img src="img/mastercard_debit.jpg" alt="Mastercard Debit">
+      <div class="mastercard_debit">
+      <img src="img/mastercard_debit.svg" alt="Mastercard Debit">
+    </div>
     </section>
     <section class="currency_converter">
       <div class="currency_converter_description">
         <h2>Конвертер валют</h2>
-        <p class="currency_converter_info">
+        <p>
           Переважна діяльність банківської групи за останні чотири звітні квартали становить 50 і більше відсотків.
         </p>
-        <a class="convert_currency_button" href="#">Конвертувати валюту</a>
+        <a href="#">Конвертувати валюту</a>
       </div>
-      <img src="img/black_card.jpg" alt="Black card in hand">
+      <img class="black_card" src="img/black_card.jpg" alt="Black card in hand">
     </section>
   </main>
   <footer>
-    <section class="address_data">
-      <div class="logo">
-        <img src="img/logo_chip.svg" alt="Logo Chip">
-        <h3>Чіп Чендж</h3>
-        <address>
+    <section class="address">
+      <div class="address_data">
+        <img src="img/icon_chip.svg" alt="Icon Chip">
+        <span>Чіп Чендж</span>
+      </div>
+        <p>
           04128, м.Київ, вул. Хрещатик, 19 <br>
           Ліцензія НБУ №156 <br>
           Ⓒ ПАТ ЧіпЧендж, 2019-2023
-        </address>
-      </div>
+        </p>
+      </section>
       <ul class="navigation">
         <li><a href="#">Послуги</a></li>
         <li><a href="#">Конвертер валют</a></li>
@@ -60,19 +76,18 @@
         <li><a href="#">Задати питання</a></li>
       </ul>
       <div class="support">
-        <img class="logo_phone" src="img/phone.svg" alt="Logo Phone">
-        <p class="support_number"><a href="tel:3773">3773</a></p>
-        <p class="support_description">Цілодобова підтримка</p>
+        <img src="img/phone.svg" alt="Logo Phone">
+        <span><a href="tel:3773">3773</a></span>
+        <p>Цілодобова підтримка</p>
       </div>
       <div class="free_call">
-        <img class="logo_handset" src="img/handset.svg" alt="Logo Handset">
-        <p class="free_call_number"><a href="tel:88001112233">8 800 111 22 33</a></p>
-      <p class="free_call_description">Безкожтовно для дзвінків в межах України</p>
+        <img src="img/handset.svg" alt="Logo Handset">
+        <span><a href="tel:88001112233">8 800 111 22 33</a></span>
+      <p>Безкоштовно для дзвінків в межах України</p>
       </div>  
       <div class="social_media">
-        <img class="social_media_icons" src="img/icons_social_media.svg" alt="Social media icons">
+        <img src="img/icons_social_media.svg" alt="Social media icons">
       </div>
-    </section>
   </footer>
 </body>
 </html>
