--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="style.css">
+  <!-- <link rel="stylesheet" href="style.css"> -->
+  <link rel="stylesheet/less" type="text/css" href="styles.less" />
+  <script src="https://cdn.jsdelivr.net/npm/less"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -17,7 +19,7 @@
       rel="stylesheet">
 </head>
 <body>
-  <header>
+  <header class="header">
     <div class="logo">
       <img class="icon_chip" src="img/icon_chip.svg" alt="Icon Chip">
       <h3>Чіп Чендж</h3>
@@ -57,7 +59,7 @@
       <img class="black_card" src="img/black_card.jpg" alt="Black card in hand">
     </section>
   </main>
-  <footer>
+  <footer class="footer">
     <section class="address">
       <div class="address_data">
         <img src="img/icon_chip.svg" alt="Icon Chip">
